packages/studio/pages/apps/IndexPage/index.module.css
.createAppButton {
  margin-left: auto;
}

.content {
  max-width: 960px;
  width: 100%;
}

.appList {
  display: grid;
  grid-auto-rows: 1fr;
  grid-gap: 10px;
  /* stylelint-disable-next-line plugin/no-unsupported-browser-features */
  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
  justify-content: center;
  margin: 0 auto;
}

.navbarTitle,
.navbarTitle:visited,
.navbarTitle:hover {
  color: inherit;
  text-decoration: none;
}

.noAppsIcon {
  font-size: 6em;
}

.noApps {
  display: grid;
  margin: 0 auto;
}

